Bucket amount and sum